--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -23,9 +23,7 @@
                 android:id="@+id/imageView1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/star"
-                android:adjustViewBounds="true"
-                android:contentDescription="@string/star" />
+                android:adjustViewBounds="true"/>
 
             <TextView
                 android:id="@+id/title"
@@ -36,7 +34,6 @@
                 android:gravity="center_horizontal"
                 android:textAlignment="center"
                 android:textColor="#fff"
-                android:text="@string/cliff"
                 android:padding="8dp"/>
 
 
