--- a/app/src/main/res/layout/edit_image_dialog.xml
+++ b/app/src/main/res/layout/edit_image_dialog.xml
@@ -24,10 +24,10 @@
 
         <TextView
             android:id="@+id/edChoosePaletteTitle"
-            style="DialogTitleStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
+            style="@style/TextAppearance.MaterialComponents.Headline5"
             android:layout_marginLeft="24dp"
             android:layout_marginTop="16dp"
             android:text="@string/choose_new_palette_color"
@@ -56,7 +56,7 @@
 
         <TextView
             android:id="@+id/edChooseLabelTitle"
-            style="DialogTitleStyle"
+            style="@style/TextAppearance.MaterialComponents.Headline5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
