--- a/app/src/main/res/layout/add_image_from_gallery_dialog.xml
+++ b/app/src/main/res/layout/add_image_from_gallery_dialog.xml
@@ -119,7 +119,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="16dp"
-            android:text="@string/share_button"
+            android:text="@string/share"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/custom_label_input"
