--- a/app/src/main/res/layout/edit_image_dialog.xml
+++ b/app/src/main/res/layout/edit_image_dialog.xml
@@ -117,7 +117,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
-            android:text="update"
+            android:text="@string/update"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/edCustomLabelInput" />
